--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 
 <head>
 	<title>HTML 5 Assignment 2</title>
-	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=1.0, user-scalable=yes"/>
 	<meta name="description" content="Splash page for Paranormal Activity 4">
-	<meta name="keywords" content="Paranormal Activity 4, suspense">
-	
-	<link rel="shortcut icon" href="#" />	
+	<meta name="keywords" content="Paranormal Activity 4, suspense">	
     
 	<link rel="stylesheet" href="css/main-index.css"/>
 	<script type='text/javascript' src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>		
@@ -21,8 +19,7 @@
 	
 	<section>	
 		<nav>			
-			<a href="productdetail.html" target="_blank">View Detailed Site!</a>			
-			<!-- <button type="button" onclick="location.href('http://www.google.com');Click Me!</button> -->
+			<a href="productdetail.html" target="_blank">View Detailed Site!</a>						
 		</nav>
 	</section>				
 
