--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
+	<meta charset="UTF-8"/>
 	<title>HTML 5 Assignment 2</title>
-	<meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=1.0, user-scalable=yes"/>
+	<meta name="viewport" content="width=640, initial-scale=1.0">
 	<meta name="description" content="Splash page for Paranormal Activity 4">
 	<meta name="keywords" content="Paranormal Activity 4, suspense">	
     
