detail page update

--- a/productdetail.html
+++ b/productdetail.html
@@ -63,5 +63,7 @@
 		<address>ben_marcelo@hotmail.com</address>
 	</footer>
 	</div>	
+	
+	<link href='http://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
 </body>
 </html>
