--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>HTML 5 Assignment 2</title>
-	<meta name="viewport" content="width=640, initial-scale=1.0">
+	<meta name="viewport" content="initial-scale=1.0">
 	<meta name="description" content="Splash page for Paranormal Activity 4">
 	<meta name="keywords" content="Paranormal Activity 4, suspense">	
     
 	<link rel="stylesheet" href="css/main-index.css"/>
-	<script type='text/javascript' src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>		
+	
 </head>
 
 <body>
@@ -28,5 +28,7 @@
 		<p>&copy; Ben Marcelo <script>today=new Date(); y0=today.getFullYear(); document.write(y0);</script> Trademark All Rights Reserved </p>
 		<address>ben_marcelo@hotmail.com</address>
 	</footer>
+	<script type='text/javascript' src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
+	<link href='http://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
 </body>
 </html>
